--- a/typescript/create-onchain-agent/package.json
+++ b/typescript/create-onchain-agent/package.json
@@ -1,9 +1,9 @@
 {
   "name": "create-onchain-agent",
-  "description": "Instantly create onchain-agent applications with Coinbase AgentKit.",
+  "description": "Instantly create onchain-agent applications with Hashkey AgentKit.",
   "repository": "https://github.com/coinbase/agentkit",
   "version": "0.3.2",
-  "author": "Coinbase Inc.",
+  "author": "Hashkey Inc.",
   "license": "Apache-2.0",
   "scripts": {
     "build": "pnpm run clean && pnpm run build:esm+types",
