--- a/typescript/examples/langchain-smart-wallet-chatbot/package.json
+++ b/typescript/examples/langchain-smart-wallet-chatbot/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@coinbase/smart-wallet-langchain-chatbot-example",
+  "name": "@hashkey/smart-wallet-langchain-chatbot-example",
   "description": "CDP Smart Wallet Agentkit Node.js Chatbot Example",
   "version": "1.0.0",
   "private": true,
-  "author": "Coinbase Inc.",
+  "author": "Hashkey Inc.",
   "license": "Apache-2.0",
   "scripts": {
     "start": "NODE_OPTIONS='--no-warnings' ts-node ./chatbot.ts",
@@ -14,8 +14,8 @@
     "format:check": "prettier -c .prettierrc --check \"**/*.{ts,js,cjs,json,md}\""
   },
   "dependencies": {
-    "@coinbase/agentkit": "workspace:*",
-    "@coinbase/agentkit-langchain": "workspace:*",
+    "@hashkey/agentkit": "workspace:*",
+    "@hashkey/agentkit-langchain": "workspace:*",
     "@langchain/core": "^0.3.19",
     "@langchain/langgraph": "^0.2.21",
     "@langchain/openai": "^0.3.14",
