--- a/typescript/framework-extensions/langchain/package.json
+++ b/typescript/framework-extensions/langchain/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@coinbase/agentkit-langchain",
+  "name": "@hashkey/agentkit-langchain",
   "version": "0.3.0",
   "description": "Langchain Toolkit extension of CDP Agentkit",
   "repository": "https://github.com/coinbase/agentkit",
-  "author": "Coinbase Inc.",
+  "author": "Hashkey Inc.",
   "license": "Apache-2.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -43,9 +43,9 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@coinbase/agentkit": "workspace:*"
+    "@hashkey/agentkit": "workspace:*"
   },
   "peerDependencies": {
-    "@coinbase/agentkit": ">=0.1.0"
+    "@hashkey/agentkit": ">=0.1.0"
   }
 }
