--- a/typescript/.changeset/config.json
+++ b/typescript/.changeset/config.json
@@ -8,7 +8,7 @@
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
   "bumpVersionsWithWorkspaceProtocolOnly": true,
-  "ignore": ["@coinbase/*-example", "mcp", "next-template"],
+  "ignore": ["@hashkey/*-example", "mcp", "next-template"],
   "___experimentalUnsafeOptions_WILL_CHANGE_IN_PATCH": {
     "onlyUpdatePeerDependentsWhenOutOfRange": true
   }
