--- a/typescript/examples/langchain-farcaster-chatbot/package.json
+++ b/typescript/examples/langchain-farcaster-chatbot/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@coinbase/farcaster-langchain-chatbot-example",
+  "name": "@hashkey/farcaster-langchain-chatbot-example",
   "description": "Farcaster Agentkit Node.js SDK Chatbot Example",
   "version": "1.0.0",
   "private": true,
@@ -13,8 +13,8 @@
     "format:check": "prettier -c .prettierrc --check \"**/*.{ts,js,cjs,json,md}\""
   },
   "dependencies": {
-    "@coinbase/agentkit": "workspace:*",
-    "@coinbase/agentkit-langchain": "workspace:*",
+    "@hashkey/agentkit": "workspace:*",
+    "@hashkey/agentkit-langchain": "workspace:*",
     "@langchain/core": "0.3.30",
     "@langchain/langgraph": "^0.2.39",
     "@langchain/openai": "^0.3.16",
