--- a/typescript/examples/langchain-xmtp-chatbot/package.json
+++ b/typescript/examples/langchain-xmtp-chatbot/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@coinbase/langchain-xmtp-chatbot-example",
+  "name": "@hashkey/langchain-xmtp-chatbot-example",
   "description": "Langchain Xmtp Chatbot Example",
   "version": "1.0.0",
   "private": true,
@@ -17,8 +17,8 @@
     "format:check": "prettier -c .prettierrc --check \"**/*.{ts,js,cjs,json,md}\""
   },
   "dependencies": {
-    "@coinbase/agentkit": "workspace:*",
-    "@coinbase/agentkit-langchain": "workspace:*",
+    "@hashkey/agentkit": "workspace:*",
+    "@hashkey/agentkit-langchain": "workspace:*",
     "@langchain/langgraph": "^0.2.21",
     "@langchain/openai": "^0.3.14",
     "@langchain/core": "^0.3.19",
