--- a/typescript/examples/model-context-protocol-smart-wallet-server/package.json
+++ b/typescript/examples/model-context-protocol-smart-wallet-server/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@coinbase/cdp-model-context-protocol-server-example",
-  "description": "Coinbase AgentKit Example Model Context Protocol Server",
+  "name": "@hashkey/cdp-model-context-protocol-server-example",
+  "description": "Hashkey AgentKit Example Model Context Protocol Server",
   "version": "1.0.0",
   "private": true,
-  "author": "Coinbase Inc.",
+  "author": "Hashkey Inc.",
   "license": "Apache-2.0",
   "bin": {
     "agentkit": "./dist/index.js"
@@ -16,8 +16,8 @@
     "format:check": "prettier -c .prettierrc --check \"**/*.{ts,js,cjs,json,md}\""
   },
   "dependencies": {
-    "@coinbase/agentkit": "workspace:*",
-    "@coinbase/agentkit-model-context-protocol": "workspace:*",
+    "@hashkey/agentkit": "workspace:*",
+    "@hashkey/agentkit-model-context-protocol": "workspace:*",
     "@modelcontextprotocol/sdk": "^1.6.1",
     "viem": "^2.24.1",
     "zod": "^3.22.4"
