--- a/typescript/create-onchain-agent/templates/mcp/package.json
+++ b/typescript/create-onchain-agent/templates/mcp/package.json
@@ -11,8 +11,8 @@
     "build": "tsup && node -e \"require('fs').chmodSync('build/index.js', '755')\""
   },
   "dependencies": {
-    "@hashkey/agentkit": "^0.6.0",
-    "@hashkey/agentkit-model-context-protocol": "^0.2.0",
+    "@hashkeychain/agentkit": "^0.6.0",
+    "@coinbase/agentkit": "^0.2.0",
     "@modelcontextprotocol/sdk": "^1.6.1",
     "@solana/web3.js": "^1.98.0",
     "bs58": "^6.0.0",
