--- a/typescript/create-onchain-agent/templates/next/package.json
+++ b/typescript/create-onchain-agent/templates/next/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.2.1",
-    "@hashkey/agentkit": "^0.6.0",
-    "@hashkey/agentkit-langchain": "^0.3.0",
-    "@hashkey/agentkit-vercel-ai-sdk": "^0.1.0",
+    "@hashkeychain/agentkit": "^0.6.0",
+    "@coinbase/agentkit-langchain": "^0.3.0",
+    "@coinbase/agentkit-vercel-ai-sdk": "^0.1.0",
     "@langchain/core": "^0.3.19",
     "@langchain/langgraph": "^0.2.21",
     "@langchain/openai": "^0.3.14",
