--- a/typescript/examples/langchain-farcaster-chatbot/package.json
+++ b/typescript/examples/langchain-farcaster-chatbot/package.json
@@ -13,8 +13,8 @@
     "format:check": "prettier -c .prettierrc --check \"**/*.{ts,js,cjs,json,md}\""
   },
   "dependencies": {
-    "@hashkey/agentkit": "workspace:*",
-    "@hashkey/agentkit-langchain": "workspace:*",
+    "@hashkeychain/agentkit": "workspace:*",
+    "@hashkeychain/agentkit-langchain": "workspace:*",
     "@langchain/core": "0.3.30",
     "@langchain/langgraph": "^0.2.39",
     "@langchain/openai": "^0.3.16",
