--- a/typescript/examples/langchain-solana-chatbot/package.json
+++ b/typescript/examples/langchain-solana-chatbot/package.json
@@ -14,8 +14,8 @@
     "format:check": "prettier -c .prettierrc --check \"**/*.{ts,js,cjs,json,md}\""
   },
   "dependencies": {
-    "@hashkey/agentkit": "workspace:*",
-    "@hashkey/agentkit-langchain": "workspace:*",
+    "@hashkeychain/agentkit": "workspace:*",
+    "@hashkeychain/agentkit-langchain": "workspace:*",
     "@langchain/core": "^0.3.19",
     "@langchain/langgraph": "^0.2.21",
     "@langchain/openai": "^0.3.14",
