--- a/typescript/examples/vercel-ai-sdk-smart-wallet-chatbot/package.json
+++ b/typescript/examples/vercel-ai-sdk-smart-wallet-chatbot/package.json
@@ -15,8 +15,8 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.1.9",
-    "@hashkey/agentkit": "workspace:*",
-    "@hashkey/agentkit-vercel-ai-sdk": "workspace:*",
+    "@hashkeychain/agentkit": "workspace:*",
+    "@hashkeychain/agentkit-vercel-ai-sdk": "workspace:*",
     "ai": "^4.1.16",
     "dotenv": "^16.4.5",
     "tsx": "^4.7.1",
