--- a/typescript/framework-extensions/langchain/package.json
+++ b/typescript/framework-extensions/langchain/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hashkey/agentkit-langchain",
+  "name": "@hashkeychain/agentkit-langchain",
   "version": "0.3.0",
   "description": "Langchain Toolkit extension of CDP Agentkit",
   "repository": "https://github.com/coinbase/agentkit",
@@ -43,9 +43,9 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@hashkey/agentkit": "workspace:*"
+    "@hashkeychain/agentkit": "workspace:*"
   },
   "peerDependencies": {
-    "@hashkey/agentkit": ">=0.1.0"
+    "@hashkeychain/agentkit": ">=0.1.0"
   }
 }
